RESOLVED FIXED 242939
display:none HTMLMediaElement with a camera track as source is leaking video frames
https://bugs.webkit.org/show_bug.cgi?id=242939
Summary display:none HTMLMediaElement with a camera track as source is leaking video ...
youenn fablet
Reported 2022-07-20 06:35:56 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-20 06:36:15 PDT
youenn fablet
Comment 2 2022-07-20 06:46:43 PDT
EWS
Comment 3 2022-07-27 11:17:37 PDT
Committed 252871@main (3d75fe46264a): <https://commits.webkit.org/252871@main> Reviewed commits have been landed. Closing PR #2580 and removing active labels.
youenn fablet
Comment 4 2022-07-27 12:02:18 PDT
Note You need to log in before you can comment on or make changes to this bug.