Source/WebCore/rendering/RenderVideo.cpp
@@ -65,6 +65,10 @@ RenderVideo::~RenderVideo()
 void RenderVideo::willBeDestroyed()
 {
     visibleInViewportStateChanged();
+
+    if (auto player = videoElement().player())
+        player->renderVideoWillBeDestroyed();
+
     RenderMedia::willBeDestroyed();
 }
 
